--- a/css/home.css
+++ b/css/home.css
@@ -10,15 +10,16 @@
 *{
     padding: 0;
     margin: 0;
-    -webkit-user-select:none;
-    -moz-user-select:none;
-    -ms-user-select:none;
-    user-select:none
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 body{
-    width: 100dvw;
-    height: 100dvh;
-    overflow: hidden;
+    width: 100dvh;
+    aspect-ratio: 1;
+    left: calc(50dvw - 50dvh);
+    /* overflow: hidden; */
 }
 #home{
     width: 80dvh;
@@ -31,7 +32,6 @@ body{
     overflow: hidden;
     text-align: center;
     background-color: rgb(30, 30, 30);
-    z-index: -1;
 }
 #home_logo{
     position: absolute;
@@ -39,6 +39,7 @@ body{
     height: 76dvh;
     top: 4%;
     left: calc(50% - 38dvh);
+    z-index: 0;
 }
 #upperBorderBox{
     position: absolute;
@@ -76,7 +77,7 @@ body{
     width: 27%;
     height: 27%;
     left: 36.5%;
-    top: 27%;
+    top: 26.8%;
     border: 0.5dvh solid rgb(0, 84, 127);
     border-top: none;
     background-color: rgb(0, 84, 127);
@@ -98,7 +99,6 @@ body{
 #innerUpperBox{
     border: 0.4dvh solid rgb(0, 84, 127);
     background-image: linear-gradient(rgb(0, 36 , 60), rgb(0, 54, 90));
-    overflow: hidden;
 }
 #textShadowBox{
     border: 0.4dvh solid transparent;
