--- a/css/game_board.css
+++ b/css/game_board.css
@@ -9,7 +9,7 @@
     position: absolute;
     text-align: center;
     top: 1dvh;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', sans-serif;
     font-size: 8dvh;
     font-weight: 900;
     letter-spacing: 0.4dvh;
@@ -189,7 +189,7 @@
 }
 .title{
     position: relative;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, sans-serif;
     font-size: 2.7dvh;
     font-weight: bold;
     letter-spacing: 0.1dvh;
@@ -203,7 +203,7 @@
     padding-bottom: 1dvh;
 }
 .content{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, sans-serif;
     font-size: 3.2dvh;
     font-weight: bold;
     color: var(--tetris-red);
@@ -409,7 +409,7 @@
     background-image: linear-gradient(rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0.4));
     box-shadow: 0.4dvh 0.4dvh rgba(0, 0, 0, 0.3),
                 -0.4dvh -0.4dvh rgba(255, 255, 255, 0.1);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Segoe UI Symbol', sans-serif;
     line-height: 8.5dvh;
     color: white;
     text-shadow: 0.2dvh 0.2dvh rgba(0, 0, 0, 0.5);
@@ -449,7 +449,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    font-family: Arial, Helvetica, sans-serif;    
+    font-family: Arial, sans-serif;    
     line-height: 2.8dvh;  
 }
 #bgm_bgm{
@@ -491,6 +491,9 @@
     color: white;
     text-shadow: 0.05dvh 0.05dvh rgba(255, 255, 255, 0.5);
     overflow: hidden;
+}
+#prevMusic, #nextMusic{
+    font-family: 'Segoe UI Symbol', sans-serif;
 }
 #bgm_title{
     position: relative;
@@ -555,7 +558,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Segoe UI Symbol', sans-serif;
     font-weight: bold;
     font-size: 13dvh;
     white-space-collapse: preserve;
@@ -574,11 +577,20 @@
 }
 #innerPad_HLD{
     flex-direction: column;
-    line-height: 2.5dvh;
 }
-#arrow_HLD{
-    font-weight: 500;
+#combo_HLD{
+    position: relative;
+    top: 2dvh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    line-height: 5dvh;
 }
 #box_HLD{
     font-size: 16dvh;
+}
+#arrow_HLD{
+    font-size: 9dvh;
+    color: rgb(50, 50, 50);
 }
