--- a/css/text_animation.css
+++ b/css/text_animation.css
@@ -1,5 +1,5 @@
 #textLayer{    
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, sans-serif;
     font-style: italic;
     font-weight: 900;
 }
