[css] 모바일 점수 갱신 모달 수정 [js] 모바일 창 최대화 함수 추가

--- a/css/modal.css
+++ b/css/modal.css
@@ -252,6 +252,8 @@
     visibility: hidden;
 }
 #enterName{
+    display: flex;
+    flex-direction: column;
     padding-bottom: 0.4dvh;
     position: relative;
     width: 70%;
