--- a/css/text_animation.css
+++ b/css/text_animation.css
@@ -22,7 +22,7 @@
                 0.1dvh 0.1dvh 0.4dvh rgba(255, 255, 255, 1),
                 -0.08dvh -0.08dvh 0.4dvh rgba(255, 255, 255, 1);
 }
-#textLayer .tetris{
+#textLayer .tetrisScore{
     font-size: 2.8dvh;
     color: var(--tetris-orange);
     text-shadow: 0.1dvh 0.1dvh rgba(0, 0, 0, 1),
