iOS safari에서 옛한글 세로쓰기 문제 해결

--- a/css/game_board.css
+++ b/css/game_board.css
@@ -625,6 +625,9 @@
     animation-direction: alternate;
     animation-timing-function: linear;
 }
+.upright{
+    text-orientation: upright;
+}
 @keyframes colorful{
     0% {color: red};
     50% {color: yellow;}
