Samsung Internet 호환

--- a/css/game_board.css
+++ b/css/game_board.css
@@ -568,7 +568,7 @@
     font-weight: bold;
     font-size: 13dvh;
     white-space-collapse: preserve;
-    text-wrap-mode: nowrap;
+    text-wrap: nowrap;
     overflow: hidden;
 }
 #innerPad_RL{
